force-app/main/default/objects/Lead/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <label>Age</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>19 or younger</fullName>
            </value>
            <value>
                <fullName>20-39</fullName>
            </value>
            <value>
                <fullName>40-60</fullName>
            </value>
            <value>
                <fullName>61 or older</fullName>
            </value>
            <value>
                <fullName>I don&apos;t want to provide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>