force-app/main/default/objects/Lead/fields/Are_you_responsible_for_hiring_technolog__c.field-meta.xml
<CustomField>
    <fullName>Are_you_responsible_for_hiring_technolog__c</fullName>
    <label>Hiring Tech Professionals</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>