force-app/main/default/objects/Lead/fields/Campaign_Member_Created__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Campaign Member Created</label>
    <type>Checkbox</type>
</CustomField>