force-app/main/default/objects/Lead/fields/CampaignI__c.field-meta.xml
<CustomField>
    <fullName>CampaignI__c</fullName>
    <defaultValue>$Label.Campaign</defaultValue>
    <label>CampaignI</label>
    <length>50</length>
    <type>Text</type>
</CustomField>