force-app/main/default/objects/Lead/fields/Chinese_Name__c.field-meta.xml
<CustomField>
    <fullName>Chinese_Name__c</fullName>
    <label>Chinese Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>