force-app/main/default/objects/Lead/fields/Convert_Lead__c.field-meta.xml
<CustomField>
    <fullName>Convert_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Convert Lead</label>
    <type>Checkbox</type>
</CustomField>