force-app/main/default/objects/Lead/fields/Convert_To_Business_Account__c.field-meta.xml
<CustomField>
    <fullName>Convert_To_Business_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This should be checked when,the lead should be converted to business account</description>
    <inlineHelpText>This should be checked when,the lead should be converted to business account</inlineHelpText>
    <label>Convert To Business Account</label>
    <type>Checkbox</type>
</CustomField>