force-app/main/default/objects/Lead/fields/Count_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Count_Affiliation__c</fullName>
    <label>Count Affiliation</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>