force-app/main/default/objects/Lead/fields/Count_Alternate_Email__c.field-meta.xml
<CustomField>
    <fullName>Count_Alternate_Email__c</fullName>
    <label>Count Alternate Email</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>