force-app/main/default/objects/Lead/fields/Count_Community__c.field-meta.xml
<CustomField>
    <fullName>Count_Community__c</fullName>
    <label>Count Community</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>