force-app/main/default/objects/Lead/fields/Count_Meeting_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Count_Meeting_Attendees__c</fullName>
    <label>Count Meeting Attendees</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>