force-app/main/default/objects/Lead/fields/Count_Webform__c.field-meta.xml
<CustomField>
    <fullName>Count_Webform__c</fullName>
    <label>Count Webform</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>