force-app/main/default/objects/Lead/fields/crm_assignment__c.field-meta.xml
<CustomField>
    <fullName>crm_assignment__c</fullName>
    <label>CRM Assignment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>