force-app/main/default/objects/Lead/fields/Cvent_Registration_Email__c.field-meta.xml
<CustomField>
    <fullName>Cvent_Registration_Email__c</fullName>
    <label>Cvent Registration Email</label>
    <type>Email</type>
</CustomField>