force-app/main/default/objects/Lead/fields/DocuSign__c.field-meta.xml
<CustomField>
    <fullName>DocuSign__c</fullName>
    <label>DocuSign</label>
    <length>250</length>
    <type>Text</type>
</CustomField>