force-app/main/default/objects/Lead/fields/Education_Level__c.field-meta.xml
<CustomField>
    <fullName>Education_Level__c</fullName>
    <label>Education Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Some high school</fullName>
            </value>
            <value>
                <fullName>Some college/technical training</fullName>
            </value>
            <value>
                <fullName>Completed college</fullName>
            </value>
            <value>
                <fullName>Completed master&apos;s degree</fullName>
            </value>
            <value>
                <fullName>Completed Ph.D</fullName>
            </value>
            <value>
                <fullName>I don&apos;t want to provide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>