force-app/main/default/objects/Lead/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Emailcustom</label>
    <type>Email</type>
</CustomField>