force-app/main/default/objects/Lead/fields/Employees__c.field-meta.xml
<CustomField>
    <fullName>Employees__c</fullName>
    <label># of Employees</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt;100</fullName>
            </value>
            <value>
                <fullName>100 - 499</fullName>
            </value>
            <value>
                <fullName>500 - 4999</fullName>
            </value>
            <value>
                <fullName>5000 - 9999</fullName>
            </value>
            <value>
                <fullName>10000+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>