force-app/main/default/objects/Lead/fields/engagio__IntentMinutesLast30Days__c.field-meta.xml
<CustomField>
    <fullName>engagio__IntentMinutesLast30Days__c</fullName>
    <label>High Intent Engagement Mins (1 mo.)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>