force-app/main/default/objects/Lead/fields/engagio__Matched_Account__c.field-meta.xml
<CustomField>
    <fullName>engagio__Matched_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Matched Account From Engagio Lead to Account Matching</description>
    <label>Matched Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Demandbase Matched Leads</relationshipLabel>
    <relationshipName>Matched_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>