force-app/main/default/objects/Lead/fields/engagio__Matched_Account_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>engagio__Matched_Account_Annual_Revenue__c</fullName>
    <description>Matched Account Annual Revenue From Engagio Lead to Account Matching</description>
    <formula>engagio__Matched_Account__r.AnnualRevenue</formula>
    <label>Matched Account Annual Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>