force-app/main/default/objects/Lead/fields/engagio__Matched_Account_Employees__c.field-meta.xml
<CustomField>
    <fullName>engagio__Matched_Account_Employees__c</fullName>
    <description>Matched Account Number of Employees From Engagio Lead to Account Matching</description>
    <formula>engagio__Matched_Account__r.NumberOfEmployees</formula>
    <label>Matched Account Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>