force-app/main/default/objects/Lead/fields/engagio__Matched_Account_EngageMinsLast7Days__c.field-meta.xml
<CustomField>
    <fullName>engagio__Matched_Account_EngageMinsLast7Days__c</fullName>
    <description>Matched Account Engagement minutes in the last 7 days</description>
    <formula>engagio__Matched_Account__r.engagio__EngagementMinutesLast7Days__c</formula>
    <label>Matched Account Engagement Mins (7 days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>