force-app/main/default/objects/Lead/fields/engagio__Matched_Account_Industry__c.field-meta.xml
<CustomField>
    <fullName>engagio__Matched_Account_Industry__c</fullName>
    <description>Matched Account Industry From Engagio Lead to Account Matching</description>
    <formula>TEXT(engagio__Matched_Account__r.Industry)</formula>
    <label>Matched Account Industry</label>
    <type>Text</type>
</CustomField>