force-app/main/default/objects/Lead/fields/engagio__Matched_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>engagio__Matched_Account_Name__c</fullName>
    <description>Matched Account Name From Engagio Lead to Account Matching</description>
    <formula>engagio__Matched_Account__r.Name</formula>
    <label>Matched Account Name</label>
    <type>Text</type>
</CustomField>