force-app/main/default/objects/Lead/fields/engagio__Matched_Account_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>engagio__Matched_Account_Owner_Name__c</fullName>
    <description>Matched Account Owner Name From Engagio Lead to Account Matching</description>
    <formula>engagio__Matched_Account__r.Owner.FirstName &amp; &quot; &quot; &amp; engagio__Matched_Account__r.Owner.LastName</formula>
    <label>Matched Account Owner Name</label>
    <type>Text</type>
</CustomField>