force-app/main/default/objects/Lead/fields/engagio__Matched_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>engagio__Matched_Account_Type__c</fullName>
    <description>Matched Account Type From Engagio Lead to Account Matching</description>
    <formula>TEXT(engagio__Matched_Account__r.Type)</formula>
    <label>Matched Account Type</label>
    <type>Text</type>
</CustomField>