force-app/main/default/objects/Lead/fields/engagio__Role__c.field-meta.xml
<CustomField>
    <fullName>engagio__Role__c</fullName>
    <description>Role</description>
    <label>Role</label>
    <length>128</length>
    <type>Text</type>
</CustomField>