force-app/main/default/objects/Lead/fields/Facebook_ID__c.field-meta.xml
<CustomField>
    <fullName>Facebook_ID__c</fullName>
    <label>Facebook ID</label>
    <type>Url</type>
</CustomField>