force-app/main/default/objects/Lead/fields/FINOS_HS_ID__c.field-meta.xml
<CustomField>
    <fullName>FINOS_HS_ID__c</fullName>
    <inlineHelpText>Finos HubSpot ID for Testing</inlineHelpText>
    <label>FINOS HS ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>