force-app/main/default/objects/Lead/fields/First_Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>First_Campaign_Type__c</fullName>
    <label>First Campaign Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Campaign_Type</valueSetName>
    </valueSet>
</CustomField>