force-app/main/default/objects/Lead/fields/Gitlab_Id__c.field-meta.xml
<CustomField>
    <fullName>Gitlab_Id__c</fullName>
    <label>Gitlab Id</label>
    <type>Url</type>
</CustomField>