force-app/main/default/objects/Lead/fields/Hubspot__c.field-meta.xml
<CustomField>
    <fullName>Hubspot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hubspot</label>
    <type>Checkbox</type>
</CustomField>