force-app/main/default/objects/Lead/fields/HubSpot_Trigger__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_Trigger__c</fullName>
    <label>HubSpot Trigger</label>
    <length>250</length>
    <type>Text</type>
</CustomField>