force-app/main/default/objects/Lead/fields/Interest_in_CommunityBridge__c.field-meta.xml
<CustomField>
    <fullName>Interest_in_CommunityBridge__c</fullName>
    <label>Interest in CommunityBridge</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Interest_in_CommunityBridge</valueSetName>
    </valueSet>
</CustomField>