force-app/main/default/objects/Lead/fields/IsCampaign__c.field-meta.xml
<CustomField>
    <fullName>IsCampaign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCampaign</label>
    <type>Checkbox</type>
</CustomField>