force-app/main/default/objects/Lead/fields/Last_Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>Last_Campaign_Type__c</fullName>
    <label>Last Campaign Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Campaign_Type</valueSetName>
    </valueSet>
</CustomField>