force-app/main/default/objects/Lead/fields/last_Modified_By_Platform_User__c.field-meta.xml
<CustomField>
    <fullName>last_Modified_By_Platform_User__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This will be checked automatically if record gets edited by Platform User</inlineHelpText>
    <label>last Modified By Platform User</label>
    <type>Checkbox</type>
</CustomField>