force-app/main/default/objects/Lead/fields/Last_Subscriber_Form_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Last_Subscriber_Form_Submitted__c</fullName>
    <label>Last Subscriber Form Submitted</label>
    <length>250</length>
    <type>Text</type>
</CustomField>