force-app/main/default/objects/Lead/fields/Lead_Source_Detail_p__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Detail_p__c</fullName>
    <label>Lead Source Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Email Marketing</fullName>
            </value>
            <value>
                <fullName>Organic Search</fullName>
            </value>
            <value>
                <fullName>Google Ads</fullName>
            </value>
            <value>
                <fullName>Bing</fullName>
            </value>
            <value>
                <fullName>Meta</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Reddit</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>Drift</fullName>
            </value>
            <value>
                <fullName>HubSpot</fullName>
            </value>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Whitepaper</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Experience</fullName>
            </value>
            <value>
                <fullName>In-person Event</fullName>
            </value>
            <value>
                <fullName>Virtual Event</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Blog</fullName>
            </value>
            <value>
                <fullName>Affiliate</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Direct Traffic</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Edx</fullName>
            </value>
            <value>
                <fullName>Cvent</fullName>
            </value>
            <value>
                <fullName>LF Auth0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>