force-app/main/default/objects/Lead/fields/Lead_Source_Owner__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Owner__c</fullName>
    <label>Lead Source Owner</label>
    <length>250</length>
    <type>Text</type>
</CustomField>