force-app/main/default/objects/Lead/fields/Lead_Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Type__c</fullName>
    <label>Lead Source Type</label>
    <length>250</length>
    <type>Text</type>
</CustomField>