force-app/main/default/objects/Lead/fields/Lead_Traffic_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Traffic_Source__c</fullName>
    <label>Lead Traffic Source</label>
    <length>250</length>
    <type>Text</type>
</CustomField>