force-app/main/default/objects/Lead/fields/LeadID__c.field-meta.xml
<CustomField>
    <fullName>LeadID__c</fullName>
    <formula>(CASESAFEID(Id))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MCLeadID</label>
    <type>Text</type>
</CustomField>