force-app/main/default/objects/Lead/fields/LeadSourceMostRecent__c.field-meta.xml
<CustomField>
    <fullName>LeadSourceMostRecent__c</fullName>
    <description>donot use</description>
    <label>Lead Source Most Recent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Email Sponsorship</fullName>
            </value>
            <value>
                <fullName>Offline Advertising</fullName>
            </value>
            <value>
                <fullName>Online Advertising</fullName>
            </value>
            <value>
                <fullName>Press</fullName>
            </value>
            <value>
                <fullName>Roadshow</fullName>
            </value>
            <value>
                <fullName>Social Media - Paid</fullName>
            </value>
            <value>
                <fullName>Social Media - Organic</fullName>
            </value>
            <value>
                <fullName>Media Partner</fullName>
            </value>
            <value>
                <fullName>Web Referral</fullName>
            </value>
            <value>
                <fullName>Blog</fullName>
            </value>
            <value>
                <fullName>List Rental</fullName>
            </value>
            <value>
                <fullName>Nurture Campaign</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Sales Generated</fullName>
            </value>
            <value>
                <fullName>Sponsored Event</fullName>
            </value>
            <value>
                <fullName>SEO</fullName>
            </value>
            <value>
                <fullName>Tradeshow</fullName>
            </value>
            <value>
                <fullName>Web Direct</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Website Resource</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>