force-app/main/default/objects/Lead/fields/LeadSourceMostRecentDetail__c.field-meta.xml
<CustomField>
    <fullName>LeadSourceMostRecentDetail__c</fullName>
    <description>donot use</description>
    <label>Lead Source Most Recent Detail`</label>
    <length>255</length>
    <type>Text</type>
</CustomField>