force-app/main/default/objects/Lead/fields/LeadURL__c.field-meta.xml
<CustomField>
    <fullName>LeadURL__c</fullName>
    <description>Lead Source URL</description>
    <label>Lead Source URL</label>
    <length>250</length>
    <type>Text</type>
</CustomField>