force-app/main/default/objects/Lead/fields/Level_of_Education__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Education__c</fullName>
    <label>Level of Education</label>
    <length>255</length>
    <type>Text</type>
</CustomField>