force-app/main/default/objects/Lead/fields/Marked_as_Lead_Converted__c.field-meta.xml
<CustomField>
    <fullName>Marked_as_Lead_Converted__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Use to skip Alternate email creation when converting from Lead.</inlineHelpText>
    <label>Alternate Email Creation</label>
    <type>Checkbox</type>
</CustomField>