force-app/main/default/objects/Lead/fields/MC_Comments__c.field-meta.xml
<CustomField>
    <fullName>MC_Comments__c</fullName>
    <description>Marketing Cloud Comments</description>
    <inlineHelpText>For marketing use only.</inlineHelpText>
    <label>MC Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>