force-app/main/default/objects/Lead/fields/MC_Emails_sent__c.field-meta.xml
<CustomField>
    <fullName>MC_Emails_sent__c</fullName>
    <label>MC Emails sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>