force-app/main/default/objects/Lead/fields/MC_Form_Name__c.field-meta.xml
<CustomField>
    <fullName>MC_Form_Name__c</fullName>
    <description>Marketing Cloud Form Name. First form completed.</description>
    <inlineHelpText>For marketing use only.</inlineHelpText>
    <label>MC Form Name</label>
    <type>TextArea</type>
</CustomField>