force-app/main/default/objects/Lead/fields/Membership_Inquiry_Type__c.field-meta.xml
<CustomField>
    <fullName>Membership_Inquiry_Type__c</fullName>
    <description>Membership Inquiry Type</description>
    <inlineHelpText>Webform Submission</inlineHelpText>
    <label>Membership Inquiry Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>