force-app/main/default/objects/Lead/fields/Merged_Leads__c.field-meta.xml
<CustomField>
    <fullName>Merged_Leads__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Counts the number of Leads merged into this Lead in the last 18 months. Note: If two Leads were merged into this Lead at one time, those two Leads will (unfortunately) only be counted as one merged Lead here, since Salesforce only creates one Lead History record for that merge event. This field is updated weekly; see Scheduled Jobs in Setup for details.</description>
    <inlineHelpText>Counts the number of Leads merged into this Lead in the last 18 months. This field is updated weekly.</inlineHelpText>
    <label># Merged Leads</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>