force-app/main/default/objects/Lead/fields/Mixmax_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Mixmax_Campaign_Name__c</fullName>
    <label>Mixmax Campaign Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>