force-app/main/default/objects/Lead/fields/MixMax_Create_Campaign__c.field-meta.xml
<CustomField>
    <fullName>MixMax_Create_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is checked, we are yet to create MixMax campaign for this Lead. It will be created within and hour.</description>
    <inlineHelpText>This will identify whether campaign and campaign member needs to be created or not?</inlineHelpText>
    <label>MixMax Create Campaign?</label>
    <type>Checkbox</type>
</CustomField>