force-app/main/default/objects/Lead/fields/Number_of_Days_Since_Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_Since_Last_Activity__c</fullName>
    <formula>IF(
ISNULL(LastActivityDate), NULL,

IF(ISNULL(LastActivityDate),1000,Today() - LastActivityDate)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Days Since Last Activity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>